overflow issue

--- a/styles/sass/_generalStyles.scss
+++ b/styles/sass/_generalStyles.scss
@@ -22,6 +22,7 @@ body {
 
 main {
   margin-left: 250px;
+  overflow-x: hidden;
 }
 
 section, .wrapper {
