--- a/styles/style.css
+++ b/styles/style.css
@@ -316,6 +316,7 @@ body {
 
 main {
   margin-left: 250px;
+  overflow-x: hidden;
 }
 
 section, .wrapper {
